@@ -191,7 +191,7 @@ void efreet_desktop_shutdown(void);
 int efreet_util_init(void);
 int efreet_util_shutdown(void);
 
-EAPI const char *efreet_home_dir_get(void);
+const char *efreet_home_dir_get(void);
 
 const char *efreet_lang_get(void);
 const char *efreet_lang_country_get(void);
